# dspark-mlx

./: .gitignore  BENCHMARK.md  README.md  RESULTS.md  conftest.py  pyproject.toml
.github/workflows/: publish.yml
_repro/: .gitignore  cmp_dspark_bf16.json  cmp_dspark_q8.json  cmp_mtp_bf16.json  cmp_mtp_q8.json  conf_sweep.py  cross_domain.py  draft_size.py  dspark_diag.py  dspark_gsm8k_speedup.py  eager_diag.py  eager_profile.py  gemma_chat_check.py  log_dspark_bf16.txt  log_dspark_q8.txt  log_mtp_bf16.txt  log_mtp_q8.txt  moe_gather_mm_sim.py  mtp_assistant_probe.py  mtp_vs_dspark.py  profile8bit.py  qmm_microbench.py  quant_all.py  quant_draft.py  quant_draft_speed.py  quant_full_speed.py  qwen14b.py  qwen_thinking.py
bench/: eval_accept.py  run_dspark.py
dspark_mlx/: __init__.py  adapter.py  cli.py  events.py  generate.py  kernels.py  loader.py  loading.py  loop.py  quant.py  recipe.py  registry.py  verify.py
dspark_mlx/arch/: __init__.py  backbone.py  deepseek_v4.py  gemma4.py  qwen3.py
dspark_mlx/hosts/: __init__.py  gemma4_unified.py  mlx_lm.py
dspark_mlx/model/: __init__.py  attention.py  block.py  config.py  drafter.py  heads.py  hyper.py  moe.py  norm_rope.py
tests/: cpu_kernels.py  gemma4_ref.py  qwen3_ref.py  reference_model.py  test_accept_lossless.py  test_block_parity.py  test_drafter_parity.py  test_gemma4_e2e.py  test_generate_lossless.py  test_heads_parity.py  test_host_mlx_lm.py  test_kernels_parity.py  test_layers_parity.py  test_loader_deepseek.py  test_loading.py  test_loop_eager.py  test_moe_gather_mm.py  test_qwen3_arch.py  test_qwen3_e2e.py  test_registry.py  torch_ref_heads.py
